# type-game

./: README.md  答辩PPT.pptx
未重构/打字游戏/: CMakeLists.txt
未重构/打字游戏/src/: Game.cpp
项目重构之后(建议用clion打开)/: CMakeLists.txt
项目重构之后(建议用clion打开)/src/: button.hpp  ltexture.hpp  main.cpp
